# data-loader-graphql

./: .gitignore  README.md  main.py  pyproject.toml
db/: driver.py  extension.py  tables.py  utils.py
schemas/: Dataloader.py  __init__.py  mutation.py  query.py  view.py
